[fix](be) Fall back for legacy ORC timestamp statistics

### What problem does this PR solve?

Issue Number: None

Related PR: #65562

Problem Summary: ORC writers before ORC-135 stored plain TIMESTAMP min/max statistics with the local writer timezone offset. Format V2 aggregate pushdown decoded those legacy values as UTC coordinates, so metadata MIN/MAX could differ from a full scan. Reject plain TIMESTAMP MIN/MAX statistics for pre-ORC-135 files and let TableReader fall back to physical scanning. Keep UTC-coordinate restoration for modern writers and extend differential coverage to a non-UTC writer/session plus a real legacy ORC fixture.

### Release note

Fix incorrect MIN/MAX aggregate pushdown results for legacy ORC TIMESTAMP files.

### Check List (For Author)

- Test: Unit Test
    - Added and updated NewOrcReaderTest.AggregatePushdownTimestamp* coverage; targeted execution is pending.
- Behavior changed: Yes. Plain TIMESTAMP MIN/MAX metadata pushdown falls back to full scanning for ORC writers older than ORC-135.
- Does this need documentation: No